# Line_Follower_Hub

./: CMakeLists.txt  README.md  example_usage.ino  keywords.txt  library.properties
examples/3ch_pid/: 3ch_pid.ino
examples/4ch_pid/: 4ch_pid.ino
examples/8ch_advanced/: 8ch_advanced.ino
src/: LineFollowerHub.h
src/algorithms/advanced/: eight_channel_junction.h  four_channel_junction.h  junction_detector.h  maze_solver.h
src/algorithms/pid/: pid_controller.h
src/motors/: l298n_driver.h  motor_interface.h
src/sensors/: sensor_interface.h
src/sensors/eight_channel/: eight_channel.h
src/sensors/four_channel/: four_channel.h
src/sensors/three_channel/: three_channel.h
src/utils/: debug_utils.h
